--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -12,8 +12,12 @@
   padding: 20px;
   background-color: #bb8fce;
   color: #fff;
-  position: sticky;
-  top: 0;
+  position: fixed; /* Fixed position */
+  top: 0; /* Stick to the top */
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* Ensure it's on top of other elements */
+  transition: background-color 0.3s ease;
 }
 
 .logo {
@@ -68,12 +72,12 @@
     position: absolute;
     top: 60px;
     right: 0;
-    background-color: #333;
+    background-color: #85929e;
     width: 100%;
     flex-direction: column;
     align-items: center;
-    transform: translateY(-100%);
-    transition: transform 0.3s ease-in-out;
+    transform: translateX(200%);
+    transition: transform 0.3s;
   }
 
   .nav--open {
