--- a/frontend/src/UserCreationForm.css
+++ b/frontend/src/UserCreationForm.css
@@ -1,14 +1,28 @@
 body {
-    /* position: fixed; */
+    position: relative;
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f9;
     margin: 0;
     padding: 0;
-    /* top: 0; */
+    top: 1;
+    left: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+#form1{
+    position: fixed;
+    top: 1in;
+    left: 40%;
+}
+/* FontAwesomeIcon{
+    position: relative;
+
+} */
+#phoneNumber{
+    position: relative;
+    z-index: 100;
 }
 
 .App {
@@ -20,6 +34,8 @@ body {
 }
 
 h1 {
+    /* position: inherit; */
+    /* top: 10; */
     text-align: center;
     color: #333;
     margin-bottom: 20px;
@@ -47,7 +63,10 @@ input {
 }
 
 #submit {
+    position: relative;
+    top: 1ic;
     padding: 12px;
+    z-index: 0;
     background-color: #4CAF50;
     color: white;
     border: none;
